2006-11-01 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Broke thought selection quite badly with ctrl)
	* src/MMapArea.py:
	* src/BaseThought.py:
	* src/TextThought.py:
	Move moving logic up to MMapArea, where it belongs
	Allows us to move multiple thoughts (which works)
	In the process, broke thought selection quite badly...

	* src/MainWindow.py:
	Fix extended buffer to not crash when selecting > 1 thought

	* src/Links.py:
	Fix typo

2006-10-31 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Text Thoughts mostly work)
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/TextThought.py:
	Make movement with keys work again
	Make Escape finish editing a thought

	(Still pretty borken)
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/TextThought.py:
	Draw text thoughts.  Add text.  No selection / moving / fancy yet.
	But at least adding text once again works

2006-10-24 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Still Broken.  Doesn't die when clicking on the map in edit mode)
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/Links.py:
	Fix some stuff that appears to have been forgotten

	* src/TextThought.py:
	Begin to move TextThought across (enough to not die when
	clicking on the map in edit mode)

	(Broken)
	* src/MMapArea.py:
	More errors fixed

	* src/Links.py:
	Move links to their new framework (which is surprisingly
	similar to the old one)

	* src/BaseThought.py:
	Add "update_links" signal to allow links to be moved easily

	(Still broken.  Less so)
	* src/MMapArea.py:
	Fix some slight syntax errors

	* src/BaseThought.py:
	Convert BaseThought and ResizableThought to new
	framework.  Add possible signals to BaseThought
	Add comments for people wanting to implement their
	own thoughts.

	(Still broken.  Slightly less so now)
	* src/MMapArea.py:
	* src/MainWindow.py:
	Finish skeleton of new MMapArea.  Still not as clean
	as I'd like, but somewhat better.  Needs reexamined
	Able to open windows and MMapAreas, but not
	add thoughts / load old maps
